@@ -549,3 +549,4 @@ FIXED: Don't crash if the intro music is interrupted by Tab in PC Speaker mode.
 FIXED: Don't switch to PC Speaker mode if there is a mod name in the replay file.
 DONE: Detect guard skill customizations in PRINCE.EXE. (Used in Illusions of Persia, for example.)
 	TODO: Should we add the guard skill options to the INI, the CFG, the replays, or the settings menu?
+FIXED: Don't draw the right edge of loose floors on the left side of a potion or sword.
